Bug#39696, "Assertion in Table.cpp (dup->state == recDeleted) fails during falcon_chill_thaw"

Fixed problems with savepoint rollbacks that prevented some chilled records from being committed.